# ros_android_trial

./: .README.md.swp  .gitignore  README.md
ros_android_basic_apps/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
ros_android_basic_apps/android_sensor_publisher/: build.gradle
ros_android_basic_apps/android_sensor_publisher/src/androidTest/java/github/com/shuheiyoshida/ros_android_trial/android_sensor_publisher/: ExampleInstrumentedTest.java
ros_android_basic_apps/android_sensor_publisher/src/main/: AndroidManifest.xml
ros_android_basic_apps/android_sensor_publisher/src/main/java/github/com/shuheiyoshida/ros_android_trial/android_sensor_publisher/: MainActivity.java
ros_android_basic_apps/android_sensor_publisher/src/main/res/values/: strings.xml
ros_android_basic_apps/android_sensor_publisher/src/test/java/github/com/shuheiyoshida/ros_android_trial/android_sensor_publisher/: ExampleUnitTest.java
ros_android_basic_apps/app/: build.gradle
ros_android_basic_apps/app/src/androidTest/java/github/com/shuheiyoshida/ros_android_trial/ros_android_basic_apps/: ExampleInstrumentedTest.java
ros_android_basic_apps/app/src/main/: AndroidManifest.xml
ros_android_basic_apps/app/src/main/java/github/com/shuheiyoshida/ros_android_trial/ros_android_basic_apps/: MainActivity.java
ros_android_basic_apps/gradle/wrapper/: gradle-wrapper.properties
ros_android_basic_apps/msg/: AndroidTest.msg
ros_android_basic_apps/simple_pub/: build.gradle
ros_android_basic_apps/simple_pub/src/main/: AndroidManifest.xml
ros_android_basic_apps/simple_pub/src/main/res/layout/: activity_main.xml
ros_android_basic_apps/simple_pub/src/main/res/values/: strings.xml
(+5 files in other folders)
