<?xml version="1.0"?>
<package format="2">
  <name>ros_android_basic_apps</name>
  <version>0.0.0</version>
  <description>The ros_android_basic_apps package</description>

  <maintainer email="shuhei@todo.todo">shuhei</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>rosjava_core</build_depend>

  <export>
  </export>
</package>
